# Minecraft_legacy_REMAKE

./:  .gitignore  .gitignore  AI.md  CMakeLists.txt  CMakePresets.json  Minecraft legacy.slnx  README.md  build.bat  build_android.bat  build_release.bat  gradle.properties  push_update.bat  push_update_android.bat  settings.gradle  Сборка проекта.txt
Minecraft legacy/: Minecraft legacy.vcxproj  Minecraft legacy.vcxproj.filters  main.cpp
Minecraft legacy/Minecraft legacy/x64/Debug/: Minecraft legacy.exe.recipe  vc145.idb
Minecraft legacy/imgui/: imgui.h  imgui_draw.cpp
Minecraft legacy/imgui/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Minecraft legacy/src/app/: main.cpp  vulkan_context.h
Minecraft legacy/src/game/: game.cpp  game.h
Minecraft legacy/src/menu/: menu.cpp  menu.h  menu_assets.cpp  menu_assets.h  menu_background.cpp  menu_background.h  menu_fonts.cpp  menu_fonts.h  menu_main.cpp  menu_main.h  menu_play_game.cpp  menu_play_game.h  menu_state.cpp  menu_state.h
Minecraft legacy/src/world/: world.cpp  world.h
Minecraft legacy/src/world/shaders/: chunk.frag  chunk.frag.spv  chunk.vert  chunk.vert.spv
Minecraft legacy/vulkan/: vulkan.h
Minecraft legacy/x64/Debug/: Minecraft legacy.exe.recipe  Minecraft legacy.vcxproj.FileListAbsolute.txt  vc145.idb
Minecraft legacy/x64/Debug/Minecraft legacy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Minecraft legacy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source_4jd/: Changes.txt  Credits.txt  manifest.json
Source_4jd/font/: font_metadata.json
Source_4jd/subpacks/classic/ui/: _global_variables.json
Source_4jd/texts/: en_GB.lang  en_US.lang
Source_4jd/textures/ui/: panoramahdr_0.hdr  panoramahdr_1.hdr
Source_4jd/ui/: _global_variables.json  _ui_defs.json  anvil_screen.json  beacon_screen.json  blast_furnace_screen.json  book_screen.json  brewing_stand_screen.json  cartography_screen.json  chat_screen.json  chest_screen.json  debug_screen.json  enchanting_screen.json  furnace_screen.json  grindstone_screen.json  horse_screen.json  hud_screen.json  inventory_screen.json  loom_screen.json  pause_screen.json  progress_screen.json  redstone_screen.json  settings_screen.json  sign_screen.json  smithing_table_screen.json  smoker_screen.json  start_screen.json  stonecutter_screen.json  toast_screen.json  trade_2_screen.json  ui_common.json
Source_4jd/vdx/4jd_ui_data/_common/: button.uidx  dropdown.uidx  gamepad_helper.uidx  item_renderer.uidx  miscellaneous.uidx  slider.uidx  text_field.uidx  toggle.uidx  tooltip.uidx
Source_4jd/vdx/4jd_ui_data/chat_4jd/: auto_complete.uidx  chat.uidx  chat_settings.uidx  host_options.uidx  messages.uidx  touch_buttons.uidx
Source_4jd/vdx/4jd_ui_data/container_4jd/: anvil.uidx  barrel.uidx  beacon.uidx  blast_furnace.uidx  brewing_stand.uidx  cartography_table.uidx  chest_ender.uidx  chest_large.uidx  chest_small.uidx  crafter.uidx  crafting_table.uidx  dispenser.uidx  dropper.uidx  enchanting_table.uidx  furnace.uidx  grindstone.uidx  hopper.uidx  horse.uidx  inventory.uidx  loom.uidx  shulker_box.uidx  smithing_table.uidx  smoker.uidx  stonecutter.uidx  villager.uidx
Source_4jd/vdx/4jd_ui_data/gui_textures_4jd/: vdx_main_textures_4jd.uidx
Source_4jd/vdx/4jd_ui_data/hud_4jd/: bottom_bar_elements.uidx  chat.uidx  gamepad_helper.uidx  layout_customization.uidx  main_hud.uidx  miscellaneous.uidx  the_hive_hud.uidx
Source_4jd/vdx/4jd_ui_data/menu_4jd/: book.uidx  dialog.uidx  pause.uidx  player_list.uidx  sign.uidx  start.uidx  toast.uidx
Source_4jd/vdx/4jd_ui_data/options_4jd/: extra_buttons.uidx  gamepad_helper.uidx  main_options.uidx  panel_bindings.uidx
Source_4jd/vdx/4jd_ui_data/progress_4jd/: progress_dimension.uidx  progress_modal.uidx  progress_popup.uidx  progress_save.uidx  progress_world.uidx
android/: README.md
android/app/: build.gradle
android/божество во плати/: баг.html
assets/shaders/: hud_textured.frag  voxel.frag  voxel.vert
backup_pause_menu_20260506_003742/src/app/: application.hpp
docs/: Project_Report_Expert_Deep_Dive.docx  TZ_Minecraft_Legacy.md  project_plan.md
saves/default/: world.json
saves/default/chunks/: c.-1.3.mlchunk  c.-2.3.mlchunk  c.0.3.mlchunk  c.0.4.mlchunk  c.1.4.mlchunk  c.1.5.mlchunk  c.1.6.mlchunk  c.2.4.mlchunk  c.2.6.mlchunk  c.3.3.mlchunk  c.3.4.mlchunk  c.4.3.mlchunk  c.5.4.mlchunk
shaders/: cube.vert.glsl  cube.vert.hlsl
src/: main.cpp
src/app/: application.cpp  application.hpp
src/common/: asset_pack.cpp  asset_pack.hpp  log.hpp  math.hpp  perf_recorder.cpp  perf_recorder.hpp
src/game/: block.cpp  block.hpp  debug_camera.cpp  debug_camera.hpp  light.cpp  light.hpp  player_controller.cpp  player_controller.hpp  world_generator.cpp  world_generator.hpp  world_runtime_tuning.hpp  world_save.cpp  world_save.hpp  world_streamer.cpp  world_streamer.hpp  world_types.hpp
src/platform/: input.hpp  platform_app.cpp  platform_app.hpp  stb_vorbis_impl.cpp
src/render/: renderer.cpp  renderer.hpp
архитектура/: архитектура.html
обновление/: repair_minecraft_legacy_kmaxdirty_duplicate.bat  repair_minecraft_legacy_query_block_marker.bat  update_minecraft_legacy_adaptive_corridor_streaming.bat  update_minecraft_legacy_adaptive_forward_corridor.bat  update_minecraft_legacy_contiguous_ring_loading.bat  update_minecraft_legacy_half_distance_loading_exit.bat  update_minecraft_legacy_optimization_stage1_fixed (2).bat  update_minecraft_legacy_panorama_loading_exit_fixed_vars.bat  update_minecraft_legacy_queue_buckets_step1_fullfunc.bat  update_minecraft_legacy_repair_streaming_priority_only.bat  update_minecraft_legacy_ring_window_optimized.bat  update_minecraft_legacy_sort_throttle_step1_fixed.bat  update_minecraft_legacy_spawn_center_first_loading.bat  update_minecraft_legacy_spawn_preload_full_safe.bat  update_minecraft_legacy_stats_foundation (1).bat  update_minecraft_legacy_streaming_render_base_fix.bat  update_minecraft_legacy_variant_b_loading_unload (1).bat  update_pause_menu.bat  update_report.txt
(+178 files in other folders)
